--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-chakra-ui",
+  "name": "gamehub",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -14,7 +14,8 @@
     "framer-motion": "^2.9.4",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0"
   },
   "license": "MIT"
 }
